--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import BackToTop from '../components/BackToTop.astro';
 import { getPersonalInfo, getExperience, getSkills, getCertifications } from '../utils/portfolio-data.js';
 
 const personalInfo = getPersonalInfo();
@@ -295,4 +296,5 @@ const certifications = getCertifications();
   </main>
   
   <Footer />
+  <BackToTop />
 </Layout>
