--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import BackToTop from '../components/BackToTop.astro';
 import { getPersonalInfo, getProjects, getSkills } from '../utils/portfolio-data.js';
 
 const personalInfo = getPersonalInfo();
@@ -261,6 +262,7 @@ const skillCategories = getSkills() || [];
   </main>
 
   <Footer />
+  <BackToTop />
   
   <script src="../scripts/flip-card.js"></script>
 </Layout>
