--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import BackToTop from '../components/BackToTop.astro';
 import { getProjects, getPersonalInfo } from '../utils/portfolio-data.js';
 
 const personalInfo = getPersonalInfo();
@@ -175,6 +176,7 @@ const allTags = [...new Set(allProjects.flatMap(project => project.technologies)
   </main>
   
   <Footer />
+  <BackToTop />
 </Layout>
 
 <script>
